[package]
name = "cosmic-ray"
version = "0.1.0"
edition = "2021"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
description = "Emulate soft errors"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
exclude = [".github", "Makefile", "testdata"]
publish = false

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
structopt = "0.3.26"

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tempdir = "0.3.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "FUJINAKA Fumiya <uzuna.kf@gmail.com>"
copyright = "2023, FUJINAKA Fumiya <uzuna.kf@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Emulate soft errors."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cosmic-ray", "usr/local/bin/", "755"],
    ["README.md", "usr/share/doc/cosmic-ray/README", "644"],
]