[workspace]

members = [
    "cosmic-ray-py"
]

[package]
name = "cosmic-ray"
version = "0.3.0"
edition = "2021"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
description = "Emulate soft errors"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
exclude = [".github", "Makefile", "testdata", ".vscode", "src/bin"]
readme = "README.md"
keywords = ["soft-error"]
repository = "https://github.com/uzuna/cosmic-ray"

[dependencies]
thiserror = "1.0.38"

env_logger = { version = "0.10.0", optional = true }
log = { version = "0.4.17", optional = true }
rand = { version = "0.8.5", optional = true }
structopt = { version = "0.3.26", optional = true }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tempdir = "0.3.7"
criterion = "0.3"

[features]
default = []
build-binary = ["env_logger", "log", "rand", "structopt"]

[[bin]]
name = "cosmic-ray"
path = "src/bin/main.rs"
required-features = ["build-binary"]

[[bench]]
name = "bench"
harness = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "FUJINAKA Fumiya <uzuna.kf@gmail.com>"
copyright = "2023, FUJINAKA Fumiya <uzuna.kf@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "Emulate soft errors."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cosmic-ray", "usr/local/bin/", "755"],
    ["README.md", "usr/share/doc/cosmic-ray/README", "644"],
]
