[package]
name = "cosmic-ray-py"
version = "0.2.0"
edition = "2021"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
description = "Emulate soft errors python binding"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
readme = "README.md"
keywords = ["soft-error"]
repository = "https://github.com/uzuna/cosmic-ray"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cosmic_ray"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
cosmic-ray = { package = "cosmic-ray", path = "../" }
rand = "0.8.5"
